--- a/DvachBrowser3/Views/TestingPage.xaml
+++ b/DvachBrowser3/Views/TestingPage.xaml
@@ -29,7 +29,7 @@
 
         <!--  header  -->
         <controls:PageHeader BackButtonVisibility="Collapsed" Frame="{x:Bind Frame, Mode=OneWay}"
-                             Content="Main Page">
+                             Content="Тестирование">
             <Interactivity:Interaction.Behaviors>
                 <behaviors:EllipsisBehavior Visibility="Collapsed" />
             </Interactivity:Interaction.Behaviors>
