Включение опции BitmapCache для ускорения рендеринга

--- a/DvachBrowser3.TextRender2/TextRender2Control.xaml
+++ b/DvachBrowser3.TextRender2/TextRender2Control.xaml
@@ -11,6 +11,9 @@
 
     <Grid>
         <Grid x:Name="MainGrid">
+            <Grid.CacheMode>
+                <BitmapCache />
+            </Grid.CacheMode>
         </Grid>
     </Grid>
 </UserControl>
