--- a/DvachBrowser3/Views/Partial/BoardTile.xaml
+++ b/DvachBrowser3/Views/Partial/BoardTile.xaml
@@ -20,6 +20,9 @@
             <SolidColorBrush Color="{ThemeResource SystemAccentColor}" />
         </Border.Background>
         <RelativePanel Margin="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <RelativePanel.CacheMode>
+                <BitmapCache />
+            </RelativePanel.CacheMode>
             <TextBlock x:Name="ShortName" Foreground="White" FontWeight="SemiBold" RelativePanel.AlignRightWithPanel="True" Margin="0, 0, 8, 0" FontSize="{x:Bind ViewModel.StyleManager.Tiles.BoardTileBoardFontSize, Mode=OneWay}" Text="{x:Bind ViewModel.Board, Converter={StaticResource ShortNameConverter}, Mode=OneWay}" />
             <Image x:Name="Logo" Width="{x:Bind ViewModel.StyleManager.Tiles.BoardTileEngineLogoSize, Mode=OneWay}" Height="{x:Bind ViewModel.StyleManager.Tiles.BoardTileEngineLogoSize, Mode=OneWay}" Stretch="Uniform" Source="{x:Bind ViewModel.ResourceLogo, Mode=OneWay}" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignVerticalCenterWith="ShortName" Opacity="0.5" />
             <TextBlock x:Name="EngineName" Foreground="White" RelativePanel.AlignVerticalCenterWith="ShortName" RelativePanel.RightOf="Logo" Opacity="0.5" FontSize="{x:Bind ViewModel.StyleManager.Tiles.BoardTileEngineNameFontSize, Mode=OneWay}" Text="{x:Bind ViewModel.Resource, Mode=OneWay}" Visibility="{x:Bind ViewModel.StyleManager.Tiles.BoardTileEngineNameVisibility, Mode=OneWay}" />
