--- a/DvachBrowser3/Views/MediaPage.xaml
+++ b/DvachBrowser3/Views/MediaPage.xaml
@@ -51,10 +51,10 @@
                 </localBehaviors:PopupMenuBehavior>
             </interactivity:Interaction.Behaviors>
             <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" ZoomMode="Enabled" x:Name="ImageScroll" Background="{x:Bind ImageBackgroundBrush, Mode=OneWay}"
-                          MinZoomFactor="0.1" MaxZoomFactor="10">
+                          MinZoomFactor="0.1" MaxZoomFactor="10" DoubleTapped="Image_OnDoubleTapped">
                 <Grid>
-                    <Image x:Name="MainImage" Visibility="Collapsed" HorizontalAlignment="Left" VerticalAlignment="Top" DoubleTapped="Image_OnDoubleTapped" />
-                    <Image x:Name="MainGifImage" Visibility="Collapsed" HorizontalAlignment="Left" VerticalAlignment="Top" DoubleTapped="Image_OnDoubleTapped" />
+                    <Image x:Name="MainImage" Visibility="Collapsed" HorizontalAlignment="Left" VerticalAlignment="Top" />
+                    <Image x:Name="MainGifImage" Visibility="Collapsed" HorizontalAlignment="Left" VerticalAlignment="Top" />
                 </Grid>
             </ScrollViewer>
         </Border>
