--- a/DvachBrowser3/Views/BoardInfoPage.xaml
+++ b/DvachBrowser3/Views/BoardInfoPage.xaml
@@ -38,11 +38,7 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         <controls:PageHeader BackButtonVisibility="Collapsed" Frame="{x:Bind Frame}" FontWeight="Bold"
-                             Content="ИНФОРМАЦИЯ О ДОСКЕ">
-            <Interactivity:Interaction.Behaviors>
-                <behaviors:EllipsisBehavior Visibility="Collapsed" />
-            </Interactivity:Interaction.Behaviors>
-
+                             Content="ИНФОРМАЦИЯ О ДОСКЕ" EllipsisVisibility="Collapsed">
         </controls:PageHeader>
 
         <Grid Grid.Row="1" Padding="4,4,4,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
