--- a/DvachBrowser3/Views/BoardPage.xaml
+++ b/DvachBrowser3/Views/BoardPage.xaml
@@ -53,10 +53,7 @@
 
         <!--  header  -->
         <controls:PageHeader BackButtonVisibility="Collapsed" Frame="{x:Bind Frame, Mode=OneWay}" FontWeight="Bold"
-                             Content="ДОСКА">
-            <interactivity:Interaction.Behaviors>
-                <behaviors:EllipsisBehavior Visibility="Collapsed" />
-            </interactivity:Interaction.Behaviors>
+                             Content="ДОСКА" EllipsisVisibility="Collapsed">
         </controls:PageHeader>
         <pa:ProgressIndicatorControl Grid.Row="1" ViewModel="{x:Bind ViewModel.Update.Progress, Mode=OneWay}" ShowMessage="True" />
         <pa:BoardThreadRefList x:Name="MainList" Grid.Row="2" ViewModel="{x:Bind ViewModel.Page, Mode=OneWay}" ThreadTapped="MainList_OnThreadTapped" Margin="4, 4, 4, 0" 
