--- a/DvachBrowser3/Views/BoardsPage.xaml
+++ b/DvachBrowser3/Views/BoardsPage.xaml
@@ -53,11 +53,7 @@
 
         <!--  header  -->
         <controls:PageHeader BackButtonVisibility="Collapsed" Frame="{x:Bind Frame, Mode=OneWay}" FontWeight="Bold"
-                             Content="СПИСОК ДОСОК">
-            <Interactivity:Interaction.Behaviors>
-                <behaviors:EllipsisBehavior Visibility="Collapsed" />
-            </Interactivity:Interaction.Behaviors>
-
+                             Content="СПИСОК ДОСОК" EllipsisVisibility="Collapsed">
         </controls:PageHeader>
 
         <Grid Grid.Row="1" Padding="4,4,4,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
