--- a/DvachBrowser3/Views/Partial/MarkupControl.xaml
+++ b/DvachBrowser3/Views/Partial/MarkupControl.xaml
@@ -9,46 +9,51 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
+    <UserControl.Resources>
+        <Style x:Key="ButtonBorderStyle" TargetType="Border">
+            <Setter Property="Background" Value="{ThemeResource ButtonBackgroundThemeBrush}"></Setter>
+        </Style>
+    </UserControl.Resources>
     <StackPanel Orientation="{x:Bind Orientation, Mode=OneWay}" x:Name="BindingRoot" VerticalAlignment="Center">
-        <Button x:Name="BoldButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Жирный" Click="BoldButton_OnClick">
+        <Border x:Name="BoldButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Жирный" Tapped="BoldButton_OnClick" Style="{StaticResource ButtonBorderStyle}">
             <Viewbox Height="16" Width="16">
                 <SymbolIcon Symbol="Bold" />
             </Viewbox>
-        </Button>
-        <Button x:Name="ItalicButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Наклонный" Click="ItalicButton_OnClick">
+        </Border>
+        <Border x:Name="ItalicButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Наклонный" Tapped="ItalicButton_OnClick" Style="{StaticResource ButtonBorderStyle}">
             <Viewbox Height="16" Width="16">
                 <SymbolIcon Symbol="Italic" />
             </Viewbox>
-        </Button>
-        <Button x:Name="SpoilerButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Спойлер" Click="SpoilerButton_OnClick">
+        </Border>
+        <Border x:Name="SpoilerButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Спойлер" Tapped="SpoilerButton_OnClick" Style="{StaticResource ButtonBorderStyle}">
             <Viewbox Height="16" Width="16">
                 <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE727;" />
             </Viewbox>
-        </Button>
-        <Button x:Name="StrikeoutButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Зачёркнутый" Click="StrikeoutButton_OnClick">
+        </Border>
+        <Border x:Name="StrikeoutButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Зачёркнутый" Tapped="StrikeoutButton_OnClick" Style="{StaticResource ButtonBorderStyle}">
             <Viewbox Height="16" Width="16">
                 <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE738;" />
             </Viewbox>
-        </Button>
-        <Button x:Name="MonospaceButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Моноширинный" Click="MonospaceButton_OnClick">
+        </Border>
+        <Border x:Name="MonospaceButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Моноширинный" Tapped="MonospaceButton_OnClick" Style="{StaticResource ButtonBorderStyle}">
             <Viewbox Height="16" Width="16">
                 <FontIcon FontFamily="Courier New" Glyph="F" />
             </Viewbox>
-        </Button>
-        <Button x:Name="UnderlineButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Подчёркнутый" Click="UnderlineButton_OnClick">
+        </Border>
+        <Border x:Name="UnderlineButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Подчёркнутый" Tapped="UnderlineButton_OnClick" Style="{StaticResource ButtonBorderStyle}">
             <Viewbox Height="16" Width="16">
                 <SymbolIcon Symbol="Underline" />
             </Viewbox>
-        </Button>
-        <Button x:Name="SupButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Верхний индекс" Click="SupButton_OnClick">
+        </Border>
+        <Border x:Name="SupButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Верхний индекс" Tapped="SupButton_OnClick" Style="{StaticResource ButtonBorderStyle}">
             <Viewbox Height="11" Width="11" Margin="5, 0, 0, 5">
                 <FontIcon FontFamily="Segoe UI" Glyph="A" />
             </Viewbox>
-        </Button>
-        <Button x:Name="SubButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Нижний индекс" Click="SubButton_OnClick">
+        </Border>
+        <Border x:Name="SubButton" Margin="2" Padding="{x:Bind MarkupPadding, Mode=OneWay}" ToolTipService.ToolTip="Нижний индекс" Tapped="SubButton_OnClick" Style="{StaticResource ButtonBorderStyle}">
             <Viewbox Height="11" Width="11" Margin="5, 5, 0, 0">
                 <FontIcon FontFamily="Segoe UI" Glyph="A" />
             </Viewbox>
-        </Button>
+        </Border>
     </StackPanel>
 </UserControl>
