--- a/DvachBrowser3/Views/TestingPage.xaml
+++ b/DvachBrowser3/Views/TestingPage.xaml
@@ -29,10 +29,7 @@
 
         <!--  header  -->
         <controls:PageHeader BackButtonVisibility="Collapsed" Frame="{x:Bind Frame, Mode=OneWay}"
-                             Content="Тестирование">
-            <Interactivity:Interaction.Behaviors>
-                <behaviors:EllipsisBehavior Visibility="Collapsed" />
-            </Interactivity:Interaction.Behaviors>
+                             Content="Тестирование" EllipsisVisibility="Collapsed">
         </controls:PageHeader>
 
         <Grid Grid.Row="1" Padding="4,4,4,0">
